@@ -1,5 +1,6 @@
 22 February 2007
 
+* Included account name in received header.
 * Added stdout delivery.
 * New append-string delivery to add data to a mail.
 
@@ -54,4 +55,4 @@
   the mail was very rarely reallocated, now that the header is added it is.
 * Changed all the descriptions to static buffers and audited use of snprintf.
 
-$Id: CHANGES,v 1.15 2007-02-22 10:31:47 nicm Exp $
+$Id: CHANGES,v 1.16 2007-02-22 16:56:57 nicm Exp $
